2008-09-15  Raja R Harinath  <harinath@hurrynot.org>

	* configure.in (AC_CONFIG_FILES): Put po/mcs/Makefile.in in its
	own stanza.
	(AC_OUTPUT): Don't list po/mcs/Makefile, it's automatically
	handled by AM_PO_SUBDIRS.

2008-09-14  Miguel de Icaza  <miguel@novell.com>

	* Added some infrastructure to start the translation of the
	compiler error messages.

	Currently the compiler does not yet use the infrastructure,
	that needs a bit of work, but the PO infrastructure is in place. 

2008-09-14  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po/mcs.
	(DIST_SUBDIRS): Add po/mcs.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_CONFIG_FILES): Add po/mcs/Makefile.in.

2008-09-14  gettextize  <bug-gnu-gettext@gnu.org>

	* gettext.m4: New file, from gettext-0.17.
	* iconv.m4: New file, from gettext-0.17.
	* lib-ld.m4: New file, from gettext-0.17.
	* lib-link.m4: New file, from gettext-0.17.
	* lib-prefix.m4: New file, from gettext-0.17.
	* nls.m4: New file, from gettext-0.17.
	* po.m4: New file, from gettext-0.17.
	* progtest.m4: New file, from gettext-0.17.
	* Makefile.am (EXTRA_DIST): Add the new files.

2008-09-12  Zoltan Varga  <vargaz@gmail.com>

	* scripts/patch-quiet.sh: Remove an obsolete comment. Change the Makefile so
	this script is rerun if Makefile.am changes.

2008-09-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a DISABLE_JIT automake conditional too.

	* configure.in: Add a --enable-minimal=jit option to disable jit, only
	allowing full-aot execution.

2008-09-10  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Move the computation of export_ldflags after libtool has
	been created.

2008-09-08  Massimiliano Mantione  <massi@ximian.com>

	* configure.in: Added DISABLE_PROFILER automake conditional.

2008-08-29  Geoff Norton  <gnorton@novell.com>

	* configure.in: Rollup our unrolled FreeBSD support so that we properly
	build and compile on FreeBSD6+.  (FreeBSD5 is 2004)
