@@ -389,15 +389,13 @@ fi
 # we do not configure the full gettext, as we consume it dynamically from C#
 AM_PO_SUBDIRS
 
-a='@GETTEXT_MACRO'
-b='_VERSION@'
-c="$a$b"
 po_dirs=po/mcs
-if grep -q $c $0; then
+if grep -q '@GETTEXT_MACRO''_VERSION@' $0; then
 	po_dirs=
 fi
-AC_CONFIG_SUBDIRS(po/mcs)
 AC_SUBST(po_dirs)
+
+AC_CONFIG_SUBDIRS(po/mcs)
 
 AC_ARG_WITH([libgdiplus], 
 	[  --with-libgdiplus=installed|sibling|<path>	Override the libgdiplus used for System.Drawing tests (defaults to NO)], 
